--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -32,16 +32,16 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="TCD.System.TouchInjection">
-      <HintPath>..\..\TouchInjectorSample\TouchInjectorSample\bin\Debug\TCD.System.TouchInjection.dll</HintPath>
-    </Reference>
     <Reference Include="LeapCSharp.NET4.0">
-      <HintPath>..\..\Leap_SDK\lib\LeapCSharp.NET4.0.dll</HintPath>
+      <HintPath>bin\Debug\LeapCSharp.NET4.0.dll</HintPath>
     </Reference>
     <Reference Include="System.Drawing" />
     <Reference Include="System.Drawing.Design" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Runtime" />
+    <Reference Include="TCD.System.TouchInjection">
+      <HintPath>bin\Debug\TCD.System.TouchInjection.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
